Style update! And a few changes to how slugs are created

--- a/less/ananda.less
+++ b/less/ananda.less
@@ -3,7 +3,12 @@
 
 @import "variables.less";
 @import "dev.less";
-@import "main.less";
 @import "header.less";
-@import "footer.less";
+@import "main.less";
 
+@import "pages/landing.less";
+@import "pages/schedule.less";
+@import "pages/classes.less";
+@import "pages/instructors.less";
+
+@import "footer.less";
