--- a/less/dev.less
+++ b/less/dev.less
@@ -12,3 +12,136 @@
     font-size: 2em;
     padding: 5px 10px;
 }
+
+.colorSwatch {
+     .clearfix();
+     height:100vh;
+     padding:.2vh .2vw;
+     background-color:@offwhite;
+    div {
+        width: 24vw;
+        height: 30vh;
+        margin:.5vmin .5vmin;
+        float: left;
+        &.offwhite{
+            width:100%;
+            height:auto;
+        }
+    }
+    .primary {
+        background-color: @primary;
+
+    }
+    .primaryLight {
+        background-color: @primaryLight;
+
+    }
+    .primaryDark {
+        background-color: @primaryDark;
+
+    }
+    .primaryFaded {
+        background-color: @primaryFaded;
+
+    }
+    .variant {
+        background-color: @variant;
+
+    }
+    .variantLight {
+        background-color: @variantLight;
+
+    }
+    .variantDark {
+        background-color: @variantDark;
+
+    }
+    .variantFaded {
+        background-color: @variantFaded;
+
+    }
+    .corner {
+        background-color: @corner;
+
+    }
+    .cornerLight {
+        background-color: @cornerLight;
+
+    }
+    .cornerDark {
+        background-color: @cornerDark;
+
+    }
+    .cornerFaded {
+        background-color: @cornerFaded;
+    }
+    div span{
+        &.primary {
+            color: @primary;
+        background-color:transparent;
+
+        }
+        &.primaryLight {
+            color: @primaryLight;
+        background-color:transparent;
+
+        }
+        &.primaryDark {
+            color: @primaryDark;
+        background-color:transparent;
+
+        }
+        &.primaryFaded {
+            color: @primaryFaded;
+        background-color:transparent;
+
+        }
+        &.variant {
+            color: @variant;
+        background-color:transparent;
+
+        }
+        &.variantLight {
+            color: @variantLight;
+        background-color:transparent;
+
+        }
+        &.variantDark {
+            color: @variantDark;
+        background-color:transparent;
+
+        }
+        &.variantFaded {
+            color: @variantFaded;
+        background-color:transparent;
+
+        }
+        &.corner {
+            color: @corner;
+        background-color:transparent;
+
+        }
+        &.cornerLight {
+            color: @cornerLight;
+        background-color:transparent;
+
+        }
+        &.cornerDark {
+            color: @cornerDark;
+        background-color:transparent;
+
+        }
+        &.cornerFaded {
+            color: @cornerFaded;
+        background-color:transparent;
+
+        }
+        &.white{
+            color:white;
+            
+        }
+    }
+    br {
+        clear: both;
+    }
+}
