--- a/views/classes.html
+++ b/views/classes.html
@@ -1,6 +1,6 @@
 {%extends 'layout.html'%}
 <!---->
-{%block bodyattr%}data-spy="scroll" data-target="#classes-nav"{%endblock%}
+{%block bodyattr%}data-spy="scroll" data-target="#classes-nav" class="classes"{%endblock%}
 <!---->
 {%block main%}
 <nav id="classes-nav" class="hidden-xs col-sm-4 col-md-3">
