--- a/views/news.html
+++ b/views/news.html
@@ -1,5 +1,5 @@
 {%extends 'layout.html'%}
-
+{% block bodyattr%}class="post"{%endblock%}
 {%block main%}
 <div class="row">
     <div class="col-sm-8 col-sm-offset-3">
