--- a/less/ananda.less
+++ b/less/ananda.less
@@ -1,6 +1,8 @@
 @import "bootstrap/bootstrap.less";
 @import "fontawesome/font-awesome.less";
 
+@import "fonts.less";
+
 @import "variables.less";
 @import "dev.less";
 @import "header.less";
@@ -10,5 +12,6 @@
 @import "pages/schedule.less";
 @import "pages/classes.less";
 @import "pages/instructors.less";
+@import "pages/admin.less";
 
 @import "footer.less";
