Icon, navbar, upcoming clases styling

--- a/less/fontawesome/icons.less
+++ b/less/fontawesome/icons.less
@@ -116,8 +116,8 @@
 .@{fa-css-prefix}-eye-slash:before { content: @fa-var-eye-slash; }
 .@{fa-css-prefix}-warning:before,
 .@{fa-css-prefix}-exclamation-triangle:before { content: @fa-var-exclamation-triangle; }
-.@{fa-css-prefix}-plane:before { content: @fa-var-plane; }
-.@{fa-css-prefix}-calendar:before { content: @fa-var-calendar; }
+.@{fa-css-prefix}-plane:before { content: @fa-var-plane; }*/
+.@{fa-css-prefix}-calendar:before { content: @fa-var-calendar; }/*
 .@{fa-css-prefix}-random:before { content: @fa-var-random; }
 .@{fa-css-prefix}-comment:before { content: @fa-var-comment; }
 .@{fa-css-prefix}-magnet:before { content: @fa-var-magnet; }
@@ -160,8 +160,8 @@
 .@{fa-css-prefix}-unlock:before { content: @fa-var-unlock; }
 .@{fa-css-prefix}-credit-card:before { content: @fa-var-credit-card; }
 .@{fa-css-prefix}-rss:before { content: @fa-var-rss; }
-.@{fa-css-prefix}-hdd-o:before { content: @fa-var-hdd-o; }
-.@{fa-css-prefix}-bullhorn:before { content: @fa-var-bullhorn; }
+.@{fa-css-prefix}-hdd-o:before { content: @fa-var-hdd-o; }*/
+.@{fa-css-prefix}-bullhorn:before { content: @fa-var-bullhorn; }/*
 .@{fa-css-prefix}-bell:before { content: @fa-var-bell; }
 .@{fa-css-prefix}-certificate:before { content: @fa-var-certificate; }
 .@{fa-css-prefix}-hand-o-right:before { content: @fa-var-hand-o-right; }
