--- a/less/pages/landing.less
+++ b/less/pages/landing.less
@@ -1,6 +1,6 @@
 .landing{
     p.upcoming{
-        margin-bottom:1em;
+        margin-top:1.5em;
         padding-left:.3em;
         time{
             display:block;
@@ -10,7 +10,6 @@
             
         }
     }
-    
     #welcome {
         padding: 19px;
     }
