--- a/less/main.less
+++ b/less/main.less
@@ -31,6 +31,9 @@ h2 {
     margin: 0;
     margin-bottom:.4em;
     border-bottom: 1px dotted rgba(0, 0, 0, .1);
+    i{
+        .pull-left();
+    }
 }
 main {
     padding-top: 1em;
