--- a/views/landing.html
+++ b/views/landing.html
@@ -16,7 +16,7 @@
 
     <div id="left" class="col-xs-12 col-sm-4">
         <div id="next" class="next card">
-            <h2>Upcoming Classes</h2>
+            <h2><i class="fa fa-calendar"></i>Upcoming Classes</h2>
             <h3>{{'Tonight' if pm else 'Today'}}</h3>
             {{upcomingPrinter(today)}}
             <h3>Tomorrow</h3>
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div id="special" class="special card">
-            <h2>Special Events</h2>
+            <h2><i class="fa fa-bullhorn"></i>Special Events</h2>
             <ol class="list-unstyled">
                 {%for ws in workshops |attrSort("StartDateTime") %}
                 <li>
@@ -38,7 +38,7 @@
             </ol>
         </div>
         <div id="contact" class="clearfix card">
-            <h2>Visit Us</h2>
+            <h2><i class="fa fa-map-marker"></i>Visit Us</h2>
             <img class="pull-right img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCOyv-a1uHs4R15mdf87cdA-j8zU3GN7Qk&center=Lander,WY&zoom=16&size=100x100&sensor=false" alt="">
             <span>Ananda Yoga Lander</span>
             <br>
