Header changed to container

--- a/less/header.less
+++ b/less/header.less
@@ -1,5 +1,6 @@
 header {
     min-height: 10em;
+    width:100%;
     background-image:url(/img/leaf.jpg);
     background-size:cover;
     background-repeat: no-repeat;
