--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -5103,28 +5103,31 @@ button.close {
 }
 header {
   min-height: 10em;
-  background-image: url(/img/leaf.jpg);
+  width: 100%;
+  background-image: url(/img/bg_leaf_1600.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 33%;
+  background-position-y: 50%;
+}
+.navbar-nav li {
+  transition: all .2s;
 }
 .navbar-nav li.active,
 .navbar-nav li:hover {
   border-top: 2px solid #295ca3;
 }
-.blueBarredA {
-  margin-top: -2px;
-  background-color: none;
+.navbar-nav li.active:hover {
+  color: #333333;
+  margin-bottom: 0px;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .navbar-nav > .active > a:hover {
-  font-style: italic;
-  margin-top: -2px;
   background-color: none;
+  margin-bottom: -2px;
 }
 .navbar-default .navbar-nav > li > a:hover {
-  margin-top: -2px;
+  margin-bottom: -2px;
   background-color: none;
 }
 body {
