Thumbnailed welcome image

--- a/views/landing.html
+++ b/views/landing.html
@@ -59,9 +59,8 @@
 
     <div id="right" class="col-xs-12 col-sm-8">
         <div id="welcome" class="clearfix card">
-
-            <img class="pull-left img-responsive" src="//lorempixel.com/200/200" alt="">
             <h2>Welcome to Lander's Ananda Yoga</h2>
+            <img class="pull-left thumbnail" src="//lorempixel.com/200/200" alt="welcome image">
             <p>Ananda is the Sanskrit word for bliss. It is a blissful, peaceful happiness. It is the kind of happiness that does not depend on your circumstances to feel a state of happiness and contentment.
             </p>
             <p>We, at Ananda Yoga Lander, strive to bring competent yoga instruction, compassion, and awareness to our community to the best of our abilities in a form true to each of our own natures in the hope of bringing further awareness to our own inner bliss that we each already possess.
