--- a/less/pages/admin.less
+++ b/less/pages/admin.less
@@ -2,3 +2,54 @@
     //for summernote
     background-color: white;
 }
+
+
+.post{
+    .post-head{
+        .make-row();
+        h1{
+            .make-sm-column(9);
+            .make-sm-column-offset(1);
+        }
+    }
+    .alertBox{
+        .make-row();
+        &>div{
+            .make-xs-column(12);
+            &>p{
+                .text-center();
+            }
+        }
+    }
+    .form-holder{
+        .make-row();
+        &>form{
+            .make-sm-column(8);
+            .make-sm-column-offset(2);
+            .form-horizontal();
+            .submit-buttons{
+                .make-row();
+                .btn-save{
+                    .btn();
+                    .btn-primary();
+                    .make-xs-column(4);
+                }
+                .btn-publish{
+                    .btn();
+                    .make-xs-column(4);
+                    .make-xs-column-offset(4);
+                }
+            }
+        }
+    }
+    .btn-publish{
+        .btn-success();
+    }
+}
+//POSTS
+
+.post-edit.post-published{
+    .btn-publish{
+        .btn-warning();
+    }
+}
